--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
                 </div>
 
                 <div class="row form">
-                  <div class="col-sm-6">
+                  <div class="col-xs-6">
                     <button type="submit" class="btn btn-cta-secondary pull-right formbtn"><i class="fa fa-paper-plane-o"></i> 送信</button>
                   </div>
-                  <div class="col-sm-6">
+                  <div class="col-xs-6">
                     <button id="modal-close" class="btn btn-cta-secondary formbtn">閉じる</button>
                   </div>
                 </div>
@@ -173,26 +173,6 @@
                             <div class="item">
                                 <h3 class="title">Software Engineer <span class="year">(2008 - Present)</span></h3>
                                 <p>「BtoB」設計・開発・テスト全ての工程を経験!</p>
-                            </div>
-                        </div>
-                    </div>
-                </section>
-
-                <section class="experience section">
-                    <div class="section-inner">
-                        <h2 class="heading">My Favorite Book</h2>
-                        <div class="content">
-                            <p>「ガネーシャの課題」<br>　- 自分にとって勇気が必要なことを1つ実行する</p>
-                            <div class="item row">
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <img class="img-responsive img-responsive-overwrite" src="assets/images/projects/book1.jpg" alt="book"/>
-                                </div>
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <img class="img-responsive img-responsive-overwrite" src="assets/images/projects/book2.jpg" alt="book"/>
-                                </div>
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <img class="img-responsive img-responsive-overwrite" src="assets/images/projects/book3.jpg" alt="book"/>
-                                </div>
                             </div>
                         </div>
                     </div>
@@ -357,7 +337,6 @@
                                 <li><i class="fa fa-calendar"></i>Startup Weekend <span class="year">(Tokyo)</span></li>
                                 <li><i class="fa fa-calendar"></i>Startup Weekend <span class="year">(Nagoya)</span></li>
                                 <li><i class="fa fa-calendar"></i>Startup Weekend <span class="year">(Osaka)</span></li>
-                                <li><i class="fa fa-calendar"></i>Startup Weekend <span class="year">(Kyoto)</span></li>
                             </ul>
                         </div>
                     </div>
