--- a/index.html
+++ b/index.html
@@ -112,7 +112,10 @@
                                     </div>
                                 </div>
                                 <div class="desc text-left">
-                                    <p>milkcocoaのサンプルを改良しました。<br>ユーザ登録すると、付箋アプリが利用できるようになります。<br>仕事やプライベートでも気軽にメモしたい時に使えます。</p>
+                                    <p>milkcocoaのサンプルを改良しました。<br>
+                                        ユーザ登録すると、付箋アプリが利用できるようになります。<br>
+                                        仕事やプライベートでも気軽にメモしたい時に使えます。
+                                    </p>
                                 </div>
                                 <a class="btn btn-cta-secondary" href="http://haruyasu.github.io/fusen/" target="_blank"><i class="fa fa-desktop"></i> 付箋アプリ</a>
                             </div>
@@ -120,44 +123,69 @@
                             <hr class="divider" />
 
                             <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/bbs/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/bbs.png" alt="bbs"/>
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://haruyasu.github.io/bbs/" target="_blank">掲示板</a></h3>
+                                    <p>milkcocoaを使用した掲示板です。<br>
+                                        別サイトでmilkcocoaを使用して投稿すると、即座に掲示板に反映される仕組みとなっています。<br>
+                                        投稿時には、name/email/bodyを使用してください。
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/othello/" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/othello.png" alt="othello" />
+                                    <img class="img-responsive project-image" src="assets/images/projects/othello.png" alt="othello"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/othello/" target="_blank">オセロゲーム</a></h3>
-                                    <p>ブラウザを2つ開いてオセロゲームを開始して下さい。<br>milkcocoaのサンプルを改良しました。<br>一部挙動がおかしい箇所は修正中です。</p>
+                                    <p>ブラウザを2つ開いてオセロゲームを開始して下さい。<br>
+                                        milkcocoaのサンプルを改良しました。<br>
+                                        一部挙動がおかしい箇所は修正中です。
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/cosmos/" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/cosmos.png" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/projects/cosmos.png" alt="cosmos"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/cosmos/" target="_blank">地球と月</a></h3>
-                                    <p>Three.jsを使用して宇宙を表現してみました。<br>背景はパーティクルを使用して宇宙っぽくみせています。<br>Three.jsは簡単に3D表現ができるので、色々と試してみたいと思っています。</p>
+                                    <p>Three.jsを使用して宇宙を表現してみました。<br>
+                                        背景はパーティクルを使用して宇宙っぽくみせています。<br>
+                                        Three.jsは簡単に3D表現ができるので、色々と試してみたいと思っています。
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/slide/" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/slide.png" alt="smash" width="300"/>
+                                    <img class="img-responsive project-image" src="assets/images/projects/slide.png" alt="slide"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/slide/" target="_blank">プログラマが作るプレゼン資料</a></h3>
-                                    <p>マークダウンを書くだけで作成できるReveal.jsはスライド作成をより効率化させてくれます。<br>デザインは自動でやってくれるので、内容だけに集中できます。</p>
+                                    <p>マークダウンを書くだけで作成できるReveal.jsはスライド作成をより効率化させてくれます。<br>
+                                        デザインは自動でやってくれるので、内容だけに集中できます。
+                                    </p>
                                 </div>
                             </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/smash/" target="_blank">
-                                    <img class="img-responsive project-image" src="assets/images/projects/smash.png" alt="smash" width="300"/>
+                                    <img class="img-responsive project-image" src="assets/images/projects/smash.png" alt="smash"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/smash/" target="_blank">テニバドサークル「SMASH!!」</a></h3>
-                                    <p>Bootstrapを使用したパララックスサイトとなっています。<br>SVGでタイトルを描画するように動きます。<br>Webを勉強した初期の頃に作成したサイトです。</p>
+                                    <p>Bootstrapを使用したパララックスサイトとなっています。<br>
+                                        SVGでタイトルを描画するように動きます。<br>
+                                        Webを勉強した初期の頃に作成したサイトです。
+                                    </p>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </section>
