--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
                                     <img class="img-responsive project-image" src="assets/images/projects/bbs.png" alt="bbs"/>
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
-                                    <h3 class="title"><a href="http://haruyasu.github.io/bbs/" target="_blank">掲示板</a></h3>
-                                    <p>milkcocoaを使用した掲示板です。<br>
-                                        別サイトでmilkcocoaを使用して投稿すると、即座に掲示板に反映される仕組みとなっています。<br>
-                                        投稿時には、name/email/bodyを使用してください。
+                                    <h3 class="title"><a href="http://haruyasu.github.io/bbs/" target="_blank">お問い合わせ掲示板</a></h3>
+                                    <p>milkcocoaを使用したお問い合わせ掲示板です。<br>
+                                        別サイトのお問い合わせなどから投稿すると、即座にお問い合わせ内容が反映される仕組みとなっています。<br>
+                                        お問い合わせは、milkcocoaを使用してname/email/bodyのidを設定するようにしてください。
                                     </p>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/othello/" target="_blank">オセロゲーム</a></h3>
-                                    <p>ブラウザを2つ開いてオセロゲームを開始して下さい。<br>
+                                    <p>ブラウザを2つ開くとオセロゲームを開始することができます。<br>
                                         milkcocoaのサンプルを改良しました。<br>
                                         一部挙動がおかしい箇所は修正中です。
                                     </p>
@@ -167,8 +167,9 @@
                                 </a>
                                 <div class="desc col-md-8 col-sm-8 col-xs-12">
                                     <h3 class="title"><a href="http://haruyasu.github.io/slide/" target="_blank">プログラマが作るプレゼン資料</a></h3>
-                                    <p>マークダウンを書くだけで作成できるReveal.jsはスライド作成をより効率化させてくれます。<br>
-                                        デザインは自動でやってくれるので、内容だけに集中できます。
+                                    <p>Reveal.jsを使用しています。<br>
+                                        マークダウンでスライドが作成できます。<br>
+                                        デザインは自動でやってくれるので、内容だけに集中でき、スライド作成がより効率化します。
                                     </p>
                                 </div>
                             </div>
