--- a/index.html
+++ b/index.html
@@ -333,13 +333,13 @@
                         <h2 class="heading">Sports Event</h2>
                         <div class="content">
                             <ul class="list-unstyled">
-                                <li><i class="fa fa-user"></i>スイーツマラソン <span class="year">(2012/2013/2014)</span></li>
-                                <li><i class="fa fa-road"></i>富士山登山 <span class="year">(2012/2013)</span></li>
-                                <li><i class="fa fa-bicycle"></i>Mt.富士ヒルクライム <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-road"></i>涸沢ヒュッテ登山 <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-bicycle"></i>シマノ鈴鹿ロード <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-bicycle"></i>CalfMan Japan <span class="year">(2012)</span></li>
-                                <li><i class="fa fa-user"></i>アクトス6時間リレー <span class="year">(2012)</span></li>
+                                <li><i class="fa fa-user fa-fw"></i>スイーツマラソン <span class="year">(2012/2013/2014)</span></li>
+                                <li><i class="fa fa-road fa-fw"></i>富士山登山 <span class="year">(2012/2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-fw"></i>Mt.富士ヒルクライム <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-road fa-fw"></i>涸沢ヒュッテ登山 <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-fw"></i>シマノ鈴鹿ロード <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-fw"></i>CalfMan Japan <span class="year">(2012)</span></li>
+                                <li><i class="fa fa-user fa-fw"></i>アクトス6時間リレー <span class="year">(2012)</span></li>
                             </ul>
                         </div>
                     </div>
