--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
                             <hr class="divider" />
 
                             <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/template/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/temp.png" alt="template"/>
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://haruyasu.github.io/template/" target="_blank">HP作成テンプレート</a></h3>
+                                    <p>HPを作成するときのテンプレートです。<br>
+                                        シンプルに作成したいときに使用します。
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/art/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/art.png" alt="art"/>
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://haruyasu.github.io/art/" target="_blank">アート</a></h3>
+                                    <p>Canvasを使用したアートです。<br>
+                                        フィールドをクリックすると、次々に円が表示されます。
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/bbs/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/bbs.png" alt="bbs"/>
                                 </a>
@@ -332,14 +356,14 @@
                     <div class="section-inner">
                         <h2 class="heading">Sports Event</h2>
                         <div class="content">
-                            <ul class="list-unstyled">
-                                <li><i class="fa fa-user fa-fw"></i>スイーツマラソン <span class="year">(2012/2013/2014)</span></li>
-                                <li><i class="fa fa-road fa-fw"></i>富士山登山 <span class="year">(2012/2013)</span></li>
-                                <li><i class="fa fa-bicycle fa-fw"></i>Mt.富士ヒルクライム <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-road fa-fw"></i>涸沢ヒュッテ登山 <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-bicycle fa-fw"></i>シマノ鈴鹿ロード <span class="year">(2013)</span></li>
-                                <li><i class="fa fa-bicycle fa-fw"></i>CalfMan Japan <span class="year">(2012)</span></li>
-                                <li><i class="fa fa-user fa-fw"></i>アクトス6時間リレー <span class="year">(2012)</span></li>
+                            <ul class="fa-ul">
+                                <li><i class="fa fa-user fa-li"></i>スイーツマラソン <span class="year">(2012/2013/2014)</span></li>
+                                <li><i class="fa fa-road fa-li"></i>富士山登山 <span class="year">(2012/2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-li"></i>Mt.富士ヒルクライム <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-road fa-li"></i>涸沢ヒュッテ登山 <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-li"></i>シマノ鈴鹿ロード <span class="year">(2013)</span></li>
+                                <li><i class="fa fa-bicycle fa-li"></i>CalfMan Japan <span class="year">(2012)</span></li>
+                                <li><i class="fa fa-user fa-li"></i>アクトス6時間リレー <span class="year">(2012)</span></li>
                             </ul>
                         </div>
                     </div>
