--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                                 <p class="summary">milkcocoaを使用した付箋アプリです。</p>
                                 <div class="featured-image">
                                     <a href="http://haruyasu.github.io/fusen/" target="_blank">
-                                        <img class="img-responsive project-image" src="assets/images/projects/fusen.png" alt="smash" width="900"/>
+                                        <img class="img-responsive project-image" src="assets/images/projects/fusen.png" alt="smash"/>
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">アプリ</div>
@@ -121,6 +121,19 @@
                             </div>
 
                             <hr class="divider" />
+
+                            <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/pinball/" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/pinball.png" alt="template"/>
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="http://haruyasu.github.io/pinball/" target="_blank">ピンボールゲーム</a></h3>
+                                    <p>JavaScriptでピンボールゲームを作成してみました。<br>
+                                        ボールをバーで跳ね返すとSCOREが上がっていきます。<br>
+                                        SCOREが上がると、バーが短くなり、ボールの速度が上がります。
+                                    </p>
+                                </div>
+                            </div>
 
                             <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/template/" target="_blank">
