Androidアプリ追加

--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
                             <hr class="divider" />
 
                             <div class="item row">
+                                <a class="col-md-4 col-sm-4 col-xs-12" href="https://play.google.com/store/apps/details?id=haruyasu.mymemoapp" target="_blank">
+                                    <img class="img-responsive project-image" src="assets/images/projects/note.png" alt="template"/>
+                                </a>
+                                <div class="desc col-md-8 col-sm-8 col-xs-12">
+                                    <h3 class="title"><a href="https://play.google.com/store/apps/details?id=haruyasu.mymemoapp" target="_blank">【アプリ】シンプルNOTE</a></h3>
+                                    <p>Androidアプリを作成しました。<br>
+                                        シンプルにメモをとることができます。<br>
+                                        画面右下の+ボタンを押すと、新規にメモを作成することができます。<br>
+                                        タイトルと内容を記述し、保存ボタンを押すだけです。<br>
+                                        編集したい場合は、メモをタッチすると編集できます。<br>
+                                        とにかくシンプルなメモアプリを使用したい方はぜひ活用してみて下さい。
+                                    </p>
+                                </div>
+                            </div>
+
+                            <div class="item row">
                                 <a class="col-md-4 col-sm-4 col-xs-12" href="http://haruyasu.github.io/pinball/" target="_blank">
                                     <img class="img-responsive project-image" src="assets/images/projects/pinball.png" alt="template"/>
                                 </a>
