--- a/index.html
+++ b/index.html
@@ -88,10 +88,9 @@
                     <div class="section-inner">
                         <h2 class="heading">About Me</h2>
                         <div class="content">
-                            <p>異業種からWebエンジニアへ転校し「フルスタックWebエンジニア」を目指します。</p>
-                            <p>C言語をBaseとし、C++、C#、HTML、CSS、JavaScript、Ruby、Python、Java、PHPなど扱えます。<br>
-                               開発にはテストが重要と考え、リファクタリングは大好物です。</p>
-                            <p>マラソン、自転車、登山、バトミントンなどを好み、アスリート並のトレーニングを日々こなしています。</p>
+                            <p>「フルスタックWebエンジニア」を目指します。</p>
+                            <p>C言語をBaseとし、C++、C#、HTML、CSS、JavaScript、Ruby、Python、Java、PHPなど扱えます。</p>
+                            <p>マラソン、自転車、登山、バトミントンなどを趣味として、日々トレーニングをこなしています。</p>
                         </div>
                     </div>
                 </section>
